# xshell

./: Cargo.toml
crates/x-checker/: Cargo.toml
crates/x-checker/src/: lib.rs
crates/x-engine/: Cargo.toml
crates/x-engine/src/: events.rs  execute.rs  lib.rs  repl.rs
crates/x-input/: Cargo.toml
crates/x-input/src/: lib.rs
crates/x-parser/: Cargo.toml
crates/x-parser/src/: lexer.rs  lib.rs  tokens.rs
crates/x-parser/src/syntax/: block.rs  command.rs  expression.rs  function.rs  mod.rs
crates/x-protocol/: Cargo.toml
crates/x-protocol/src/: command.rs  example.rs  lib.rs  output.rs  shell_err.rs  state.rs  tokens.rs
crates/x-protocol/src/ast/: mod.rs
crates/x-protocol/src/engine/: events.rs  mod.rs  state.rs
crates/x-render/: Cargo.toml
crates/x-render/src/: lib.rs
crates/x-repl/: Cargo.toml
crates/x-util/: Cargo.toml
crates/x-util/src/: lib.rs  whoami.rs
crates/x-util/src/unix/: mod.rs  whoami.rs
src/: builtin_commands.rs  cli.rs  main.rs
