[package]
name = "xshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x-protocol = { path = "./crates/x-protocol" }
x-util = { path = "./crates/x-util" }

[workspace]
members = [
  "./crates/x-protocol",
  "./crates/x-util"
]
