[package]
name = "x-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x-util = { path = "../x-util" }
x-input = { path = "../x-input" }
x-render = { path = "../x-render" }
x-protocol = { path = "../x-protocol" }
x-parser = { path = "../x-parser" }
x-repl = { path = "../x-repl" }
